WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236364
[WebAuthn] Modify getAllLocalAuthenticatorCredentials according to internal needs
https://bugs.webkit.org/show_bug.cgi?id=236364
Summary
[WebAuthn] Modify getAllLocalAuthenticatorCredentials according to internal n...
pascoe@apple.com
Reported
2022-02-09 07:14:47 PST
^
Attachments
Patch
(3.76 KB, patch)
2022-02-09 07:18 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
Patch
(9.57 KB, patch)
2022-02-09 13:47 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
Patch
(10.55 KB, patch)
2022-02-09 16:46 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
Patch for landing
(10.59 KB, patch)
2022-02-14 09:49 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2022-02-09 07:14:58 PST
rdar://88585418
pascoe@apple.com
Comment 2
2022-02-09 07:18:03 PST
Created
attachment 451371
[details]
Patch
pascoe@apple.com
Comment 3
2022-02-09 13:47:19 PST
Created
attachment 451440
[details]
Patch
pascoe@apple.com
Comment 4
2022-02-09 16:46:11 PST
Created
attachment 451459
[details]
Patch
Brent Fulgham
Comment 5
2022-02-11 10:48:26 PST
Comment on
attachment 451459
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=451459&action=review
r=me
> Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:348 > ++ (void)setUsernameForLocalCredentialWithGroup:(NSString *)group credential:(NSData *)credentialID username: (NSString *)username
Nit: I think we would usually name this something like 'setUsernameForLocalCredentialWithGroupAndID:'
> Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:553 > ++ (NSData *)exportLocalAuthenticatorCredentialWithGroup:(NSString *)group credential:(NSData *)credentialID error:(NSError **)error
Ditto: "WithGroupAndID"
pascoe@apple.com
Comment 6
2022-02-14 09:49:57 PST
Created
attachment 451918
[details]
Patch for landing
EWS
Comment 7
2022-02-15 09:05:08 PST
Committed
r289817
(
247278@main
): <
https://commits.webkit.org/247278@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451918
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug