Modify getAllLocalAuthenticatorCredentials according to internal requirements https://bugs.webkit.org/show_bug.cgi?id=236364 rdar://88585418

Reviewed by Brent Fulgham.

This patch modifies the getAllLocalAuthenticatorCredentials SPI to return additional
fields according to internal needs.

* UIProcess/API/Cocoa/_WKWebAuthenticationPanel.h:
* UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:
(updateCredentialIfNessesary):
(getAllLocalAuthenticatorCredentialsImpl):



Canonical link: https://commits.webkit.org/247278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289817 268f45cc-cd09-0410-ab3c-d52691b4dbfc